# serializer version: 1
# name: test_compact
  '''
  █─dict
  ├─a = 1
  └─b = 
    █─dict
    └─c = 3
  '''
# ---
# name: test_nested
  '''
  █─dict
  ├─a = 1
  └─b = █─dict
        └─c = 3
  '''
# ---
# name: test_nested_list
  '''
  █─dict
  ├─a = 1
  └─b = █─list
        └─0 = █─dict
              └─c = 3
  '''
# ---
# name: test_simple
  '''
  █─dict
  ├─a = 1
  └─b = 2
  '''
# ---
